# BX-lighthouse

./: Cargo.toml  Dockerfile
beacon_node/beacon_chain/src/: eth1_chain.rs
beacon_node/http_api/src/: validator_inclusion.rs  validators.rs
beacon_node/lighthouse_network/src/service/: mod.rs
consensus/state_processing/src/: genesis.rs  lib.rs  per_block_processing.rs  rewards.rs
consensus/state_processing/src/common/: slash_validator.rs  update_progressive_balances_cache.rs
consensus/state_processing/src/per_block_processing/: errors.rs  process_operations.rs  verify_attestation.rs
consensus/state_processing/src/per_block_processing/altair/: sync_committee.rs
consensus/state_processing/src/per_epoch_processing/: effective_balance_updates.rs  single_pass.rs
consensus/state_processing/src/per_epoch_processing/base/: rewards_and_penalties.rs
consensus/types/: Cargo.toml
consensus/types/presets/gnosis/: electra.yaml  phase0.yaml
consensus/types/presets/mainnet/: electra.yaml  phase0.yaml
consensus/types/presets/minimal/: electra.yaml  phase0.yaml
consensus/types/src/: chain_spec.rs  epoch_cache.rs  validator.rs
testing/custom_reward_test/: Cargo.toml
testing/custom_reward_test/src/: main.rs
